--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
        <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version></version>
+            <version>1.6.2</version>
         </dependency>
         <dependency>
             <groupId>com.github.librepdf</groupId>
